[B][COLOR red]Update - v3.4.0 - Dec. 26, 2019[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Added 2nd notification to library folder check notification
    for auto folder setup.  Now if you answer "no" to the auto
    folder setup you will be presented with a 2nd yes-no dialog
    asking if you'd also like to disable the "Auto Update Service".[/I]
[COLOR yellow]--[/COLOR][I] Fixed Update Service failure if no user lists were
    previously imported under the new system. The failure
    occurred because the db table was only written during
    the import process so service update checks did not
    find this table and halted the entire update process.
    This has been fixed.[/I]
[COLOR yellow]--[/COLOR][I] Fixed occasional duplicate folder entries in the Kodi
    "MyVideos*.db" file.  This occurs because Kodi does
    not fully remove path table entries when manually
    deleted but instead Kodi zeroes out the values so it's
    not seen.  This has been fixed to remove those old
    entries when using the auto folder setup process.[/I]
[COLOR yellow]--[/COLOR][I] Removed link caching process outside of Venom due
    to no global context menu to "Rescrape".  Global
    context menu options are in the works so this is a
    temp solution.[/I]

[B][COLOR red]Update - v3.3.9 - Dec. 23, 2019[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Fixed broken for loop from previous update preventing
    Library Updates from completing.[/I]
[COLOR yellow]--[/COLOR][I] Added Disney+ and Showcase to TVShows Networks.[/I]

[B][COLOR red]Update - v3.3.8 - Dec. 23, 2019[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Switched from Trakt slug check for ID's to Trakt IDLookup
    method. Slug checks seems to report same IMDB_ID
    but different TVDB_ID for some shows. IDLookup method
    is less prone to errors.[/I]
[COLOR yellow]--[/COLOR][I] Added TMDb Watchlist, Favorites, and Userlist to library
    import options for both Movies and TV Shows.[/I]