@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.venom" version="3.4.0" name="[COLOR red]Venom[/COLOR]" provider-name="Venom">
+<addon id="plugin.video.venom" version="3.4.1" name="[COLOR red]Venom[/COLOR]" provider-name="Venom">
 
 	<requires>
 		<import addon="xbmc.python" version="2.19.0" />
@@ -38,27 +38,10 @@
 			<screenshot>resources/screenshots/screenshot03a.jpg</screenshot>
 		</assets>
 		<news>
-[B][COLOR red]Update - v3.4.0 - Dec. 26, 2019[/COLOR][/B]
-[COLOR yellow]--[/COLOR][I] Added 2nd notification to library folder check notification
-    for auto folder setup.  Now if you answer "no" to the auto
-    folder setup you will be presented with a 2nd yes-no dialog
-    asking if you'd also like to disable the "Auto Update Service".[/I]
-[COLOR yellow]--[/COLOR][I] Fixed Update Service failure if no user lists were
-    previously imported under the new system. The failure
-    occurred because the db table was only written during
-    the import process so service update checks did not
-    find this table and halted the entire update process.
-    This has been fixed.[/I]
-[COLOR yellow]--[/COLOR][I] Fixed occasional duplicate folder entries in the Kodi
-    "MyVideos*.db" file.  This occurs because Kodi does
-    not fully remove path table entries when manually
-    deleted but instead Kodi zeroes out the values so it's
-    not seen.  This has been fixed to remove those old
-    entries when using the auto folder setup process.[/I]
-[COLOR yellow]--[/COLOR][I] Removed link caching process outside of Venom due
-    to no global context menu to "Rescrape".  Global
-    context menu options are in the works so this is a
-    temp solution.[/I]
+[B][COLOR red]Update - v3.4.1 - Dec. 29, 2019[/COLOR][/B]
+[COLOR yellow]--[/COLOR][I] Fixed Trakt/TMDb list imports not adding "list_name"
+    to database when imported from My Movies or My TVShows.
+    This caused service update failures.[/I]
 		</news>
 	</extension>
 </addon>
